# BC

./: CMakeLists.txt
external1/glad/: CMakeLists.txt
external1/glad/include/glad/: glad.h
external1/glad/src/: glad.c
res/shaders/: fragment.txt
src/: main.cpp
src/Renderer/: ShaderProgram.cpp  ShaderProgram.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
